Port to 1.19.3, game can launch, new world can be created.
Other contents are largely untested.